Added indentations in the code

--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
         <li class="nav-item active">
           <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
-        
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          Topics
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Gen AI</a>
-          <a class="dropdown-item" href="#">Web Development</a>
-          <a class="dropdown-item" href="#">Quantum Computing</a>
-          <a class="dropdown-item" href="#">Android Development</a>
-          <!-- <a class="dropdown-item" href="#"></a> -->
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Support</a>
-          <a class="dropdown-item" href="#">Write for us</a>
-        </div>
+            aria-haspopup="true" aria-expanded="false">
+            Topics
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Gen AI</a>
+            <a class="dropdown-item" href="#">Web Development</a>
+            <a class="dropdown-item" href="#">Quantum Computing</a>
+            <a class="dropdown-item" href="#">Android Development</a>
+            <!-- <a class="dropdown-item" href="#"></a> -->
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Support</a>
+            <a class="dropdown-item" href="#">Write for us</a>
+          </div>
         <li class="nav-item">
           <a class="nav-link" href="/about.html">About</a>
         </li>
@@ -232,7 +232,8 @@
             <strong class="d-inline-block mb-2 text-danger">FrontEnd</strong>
             <h3 class="mb-0">Bootstrap Templates</h3>
             <div class="mb-1 text-muted">Dec 12</div>
-            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
+              additional content.</p>
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
@@ -247,7 +248,8 @@
             <strong class="d-inline-block mb-2 text-warning">Python</strong>
             <h3 class="mb-0">Learn Python</h3>
             <div class="mb-1 text-muted">Nov 30</div>
-            <p class="mb-auto">Starting out in the world of programming? Join us to learn the concepts of programming via Python.</p>
+            <p class="mb-auto">Starting out in the world of programming? Join us to learn the concepts of programming
+              via Python.</p>
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
@@ -264,7 +266,7 @@
         <path d="M12 6H0l6-6z" />
       </svg>
     </a>
-      <!-- <span class="screen-reader-text">Back to top</span> -->
+    <!-- <span class="screen-reader-text">Back to top</span> -->
     <!-- <p class="float-right"><a href="#">Back to top</a></p> -->
     <p>© 2023-2024 ByteBloom, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
   </footer>
