--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="CSS_files/required.css">
     <title>iCoder - Heaven for Programmers</title>
 </head>
 
@@ -60,11 +60,13 @@
         <h2>Contact Us</h2>
         <form>
             <div class="form-group">
-                <label for="exampleFormControlInput1">Email address</label>
+                <label for="exampleFormControlInput1">Email address <span class="mandatory"> *</span></label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
             </div>
+            <br>
             <div class="form-group">
-                <label for="exampleFormControlSelect1">Select the topic of your Query</label>
+                <label for="exampleFormControlSelect1">Select the topic of your Query <span class="mandatory">
+                        *</span></label>
                 <select class="form-control" id="exampleFormControlSelect1">
                     <option>Web</option>
                     <option>Tech Stack</option>
@@ -72,47 +74,87 @@
                     <option>Others</option>
                 </select>
             </div>
-            <div class="form-group row">
-                <div class="col-sm-2">Are you a Member?</div>
-                <div class="col-sm-10">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="gridCheck1">
-                        <label class="form-check-label" for="gridCheck1">
-                            Yes
-                        </label>
-                    </div>
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-sm-2">Are you an Educator?</div>
-                <div class="col-sm-10">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="gridCheck2">
-                        <label class="form-check-label" for="gridCheck2">
-                            Yes
-                        </label>
-                    </div>
-                </div>
-            </div>
-            <!-- <div class="form-group row">
-                <div class="col-sm-2">Are you a Coder?</div>
-                <div class="col-sm-10">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="gridCheck3">
-                        <label class="form-check-label" for="gridCheck3">
-                            Yes
-                        </label>
-                    </div>
-                </div>
-            </div> -->
+            <br>
 
+            <div class="form-group row">
+                <div class="col-sm-2">Are you a Member? <span class="mandatory"> *</span></div>
+                <div class="col-sm-10">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="membership" id="yesRadio"
+                                    value="yes">
+                                <label class="form-check-label" for="yesRadio">
+                                    Yes
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="membership" id="noRadio" value="no">
+                                <label class="form-check-label" for="noRadio">
+                                    No
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="form-group row">
+                <div class="col-sm-2">In case you aren't a member, would you like to become one?</div>
+                <div class="col-sm-10">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="becomeMemberCheckbox">
+                        <label class="form-check-label" for="becomeMemberCheckbox">
+                            Yes, I want to become a member :)
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="becomeMemberCheckbox">
+                        <label class="form-check-label" for="becomeMemberCheckbox">
+                            Nope :(
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="form-group row">
+                <div class="col-sm-2">Are you an Educator?<span class="mandatory">*</span></div>
+                <div class="col-sm-10">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="membership" id="yesRadio"
+                                    value="yes">
+                                <label class="form-check-label" for="yesRadio">
+                                    Yes
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="membership" id="noRadio" value="no">
+                                <label class="form-check-label" for="noRadio">
+                                    No
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
             <div class="form-group">
                 <label for="exampleFormControlTextarea1">Tell us a bit about yourself</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="2"
+                    placeholder="This is completely optional but if you want to join us, we would like to know you better!"></textarea>
             </div>
+            <br>
             <div class="form-group">
-                <label for="exampleFormControlTextarea2">Elaborate Your Concern</label>
-                <textarea class="form-control" id="exampleFormControlTextarea2" rows="3"></textarea>
+                <label for="exampleFormControlTextarea2">Elaborate Your Concern <span class="mandatory">
+                        *</span></label>
+                <textarea class="form-control" id="exampleFormControlTextarea2" rows="3"
+                    placeholder="Fill NA if you want to become a member and tick mark the checkbox above."></textarea>
             </div>
             <button class="btn btn-primary">Submit</button>
         </form>
