--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <div class="mb-1 text-muted">Dec 28</div>
             <p class="card-text mb-auto">Uncover trends, connect with
               experts, and enhance skills in immersive workshops and networking experiences</p>
-            <a href="#" class="stretched-link">Continue reading</a>
+            <a href="https://globaldevslam.com/" target="_blank" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
             <img class="bd-placeholder-img" width="200" height="250" src="assets\global_conferences.jpg" alt="">
@@ -214,7 +214,7 @@
             <p class="mb-auto">Explore UI/UX principles, graphic
               design fundamentals, and creative problem-solving.
             </p>
-            <a href="#" class="stretched-link">Continue reading</a>
+            <a href="https://www.codeavengers.com/" target="_blank" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
             <img class="bd-placeholder-img" width="200" height="250"
@@ -232,9 +232,9 @@
             <strong class="d-inline-block mb-2 text-danger">FrontEnd</strong>
             <h3 class="mb-0">Bootstrap Templates</h3>
             <div class="mb-1 text-muted">Dec 12</div>
-            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
-              additional content.</p>
-            <a href="#" class="stretched-link">Continue reading</a>
+            <p class="card-text mb-auto">Explore diverse & responsive templates. Simplify web design—landing pages,
+              dashboards, e-commerce solutions.</p>
+            <a href="https://bootstrapmade.com/" target="_blank" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
             <img class="bd-placeholder-img" width="200" height="250" src="thumb2.jpg" alt="">
@@ -246,11 +246,11 @@
           class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
           <div class="col p-4 d-flex flex-column position-static">
             <strong class="d-inline-block mb-2 text-warning">Python</strong>
-            <h3 class="mb-0">Learn Python</h3>
+            <h3 class="mb-0">Start Python</h3>
             <div class="mb-1 text-muted">Nov 30</div>
             <p class="mb-auto">Starting out in the world of programming? Join us to learn the concepts of programming
               via Python.</p>
-            <a href="#" class="stretched-link">Continue reading</a>
+            <a href="https://www.learnpython.org/" target="_blank" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
             <img class="bd-placeholder-img" width="200" height="250" src="assets/learn_python.jpg" alt="">
@@ -268,7 +268,13 @@
     </a>
     <!-- <span class="screen-reader-text">Back to top</span> -->
     <!-- <p class="float-right"><a href="#">Back to top</a></p> -->
-    <p>© 2023-2024 ByteBloom, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+    <p>© 2023-2024 ByteBloom, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a>
+    <!-- Social handles/icons -->
+    <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
+    <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+    <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+    <!-- Add more social icons or links as needed -->
+    </p>
   </footer>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -281,6 +287,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
+    <!-- custom JS -->
   <script src="JS_files/scroll_back.js"></script>
 </body>
 
