--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
-            Topics
+            Trending
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="#">Gen AI</a>
@@ -56,7 +56,7 @@
         <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
       </form>
       <div class="mx-2">
-        <button class="btn btn-danger" data-toggle="modal" data-target="#loginModal">Login</button>
+        <button class="btn btn-success" data-toggle="modal" data-target="#loginModal">Login</button>
         <button class="btn btn-danger" data-toggle="modal" data-target="#signupModal">SignUp</button>
       </div>
     </div>
@@ -278,7 +278,6 @@
       <a href="#" class="social-icon"><img src="assets\insta.png" alt="Instagram" width="20" height="20"></a>
     </span>
     
-    <!-- Add more social icons or links as needed -->
     </p>
   </footer>
   <!-- Optional JavaScript -->
