Restructured the project

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                     and foster a community of passionate learners.</p>
             </div>
             <div class="col-md-5">
-                <img class="img-fluid" src="about-1.jpg" alt="">
+                <img class="img-fluid" src="assets/about/about-1.jpg" alt="">
 
             </div>
         </div>
@@ -83,7 +83,7 @@
                         href="http://tinyurl.com/genuineproof" target="_blank">ByteBloom</a>.</p>
             </div>
             <div class="col-md-5 order-md-1">
-                <img class="img-fluid" src="about-2.jpg" alt="">
+                <img class="img-fluid" src="assets/about/about-2.jpg" alt="">
 
             </div>
         </div>
@@ -97,7 +97,7 @@
                     community.</p>
             </div>
             <div class="col-md-5">
-                <img class="img-fluid" src="about-3.jpg" alt="">
+                <img class="img-fluid" src="assets/about/about-3.jpg" alt="">
 
             </div>
         </div>
