--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="1.jpg" class="d-block w-100" alt="...">
+        <img src="assets/homepage/1.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h2>Welcome to ByteBloom</h2>
           <p>Technology News, Development and Trends</p>
@@ -156,7 +156,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="2.jpg" class="d-block w-100" alt="...">
+        <img src="assets/homepage/2.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h2>The Best Coding Blog</h2>
           <p>Technology News, Development and Trends</p>
@@ -166,7 +166,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="3.jpg" class="d-block w-100" alt="...">
+        <img src="assets/homepage/3.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h2>Award winning Blog</h2>
           <p>Technology News, Development and Trends</p>
@@ -200,7 +200,7 @@
             <a href="https://globaldevslam.com/" target="_blank" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img class="bd-placeholder-img" width="200" height="250" src="assets\global_conferences.jpg" alt="">
+            <img class="bd-placeholder-img" width="200" height="250" src="assets/homepage/global_conferences.jpg" alt="">
           </div>
         </div>
       </div>
@@ -237,7 +237,7 @@
             <a href="https://bootstrapmade.com/" target="_blank" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img class="bd-placeholder-img" width="200" height="250" src="thumb2.jpg" alt="">
+            <img class="bd-placeholder-img" width="200" height="250" src="assets/homepage/thumbnail3.jpg" alt="">
           </div>
         </div>
       </div>
@@ -253,7 +253,7 @@
             <a href="https://www.learnpython.org/" target="_blank" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img class="bd-placeholder-img" width="200" height="250" src="assets/learn_python.jpg" alt="">
+            <img class="bd-placeholder-img" width="200" height="250" src="assets/homepage/learn_python.jpg" alt="">
 
           </div>
         </div>
