--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
 
 
             </ul>
-            <form class="form-inline my-2 my-lg-0">
+            <form class="form-inline my-2 my-lg-0" id="non-utility-search" >
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
@@ -60,7 +60,7 @@
     <div class="container my-4">
         <h2>Contact Us</h2>
         <br><br>
-        <form>
+        <form id="myForm">
             <div class="form-group">
                 <label for="exampleFormControlInput1"><b>Email address</b><span class="mandatory"> *</span></label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
@@ -110,13 +110,13 @@
                 <div class="col-sm-2">In case you aren't a member, would you like to become one?</div>
                 <div class="col-sm-10">
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="member" id="becomeMemberRadio" disabled>
+                        <input class="form-check-input" type="radio" name="member" id="becomeMemberRadio">
                         <label class="form-check-label" for="becomeMemberRadio">
                             Yes, I want to become a member &#128512
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="member" id="not-becomeMemberRadio" disabled>
+                        <input class="form-check-input" type="radio" name="member" id="not-becomeMemberRadio">
                         <label class="form-check-label" for="not-becomeMemberRadio">
                             Nope &#128529
                         </label>
@@ -131,7 +131,7 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="membership" id="yes-Educator"
+                                <input class="form-check-input" type="radio" name="teacher" id="yes-Educator"
                                     value="yes">
                                 <label class="form-check-label" for="yes-Educator">
                                     Yes
@@ -140,7 +140,7 @@
                         </div>
                         <div class="col-sm-6">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="membership" id="no-Educator"
+                                <input class="form-check-input" type="radio" name="teacher" id="no-Educator"
                                     value="no">
                                 <label class="form-check-label" for="no-Educator">
                                     No
@@ -177,9 +177,12 @@
                     placeholder="Fill NA if you want to become a member and tick mark the Yes checkbox above!"></textarea>
             </div>
             <br>
-            <button class="btn btn-primary">Submit</button>
+            <!-- <button class="btn btn-primary">Submit</button> -->
+            <input class="btn btn-primary" type="submit" value="Submit">
         </form>
-
+        <div id="notification">
+            <div class="notification-content" id="notificationContent"></div>
+        </div>
     </div>
 
     <footer class="container">
@@ -213,10 +216,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- Custom JS code from here on -->
     <script src="JS_files/scroll_back.js"></script>
-    <script src="JS_files/form.js">
+    <script src="JS_files/form.js"></script>
     </script>
 
 
